message auth_initiator {
  required string session_guid=1;
  required string initiator_guid=2;
  required int32 is_requesting_public_key=3;
  required int32 is_requesting_finish=4;
  required string initiator_public_key=5;
  optional bytes shared_secret=6;
  required string secure_comms_port=7;
  optional string initiator_message=8;
}
